--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <title>Home</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,400&subset=cyrillic,latin,greek,vietnamese">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/mobirise/css/style.css">
   <link rel="stylesheet" href="assets/dropdown-menu/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -20,7 +19,7 @@
   
 </head>
 <body>
-<section id="dropdown-menu-0" data-rv-view="0">
+<section id="dropdown-menu-2" data-rv-view="5">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -43,33 +42,10 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header1-1" data-rv-view="2" style="background-image: url(assets/images/bg5.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left mbr-after-navbar">
-        
-        <div class="mbr-box__container mbr-section__container container">
-            <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-left">
-                <div class="row"><div class=" col-sm-6 col-sm-offset-6">
-                    <div class="mbr-hero animated fadeInUp">
-                        <h1 class="mbr-hero__text">FULL-SCREEN HEADER</h1>
-                        <p class="mbr-hero__subtext">Click any text to edit or style it. Click blue "Gear" icon in the top right corner to hide/show buttons, text, title and change the block background. <br> Click red "+" in the bottom right corner to add a new block. Use the top left menu to create new pages, sites and add extensions.</p>
-                    </div>
-                    <div class="mbr-buttons btn-inverse mbr-buttons--left"><a class="mbr-buttons__btn btn btn-lg btn-danger animated fadeInUp delay" href="https://mobirise.com">DOWNLOAD NOW</a> <a class="mbr-buttons__btn btn btn-lg btn-default animated fadeInUp delay" href="https://mobirise.com">LEARN MORE</a></div>
-                </div></div>
-            </div></div>
-        </div>
-        <div class="mbr-arrow mbr-arrow--floating text-center">
-            <div class="mbr-section__container container">
-                <a class="mbr-arrow__link" href="#next"><i class="glyphicon glyphicon-menu-down"></i></a>
-            </div>
-        </div>
-    </div>
-</section>
 
-
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/g">create a website for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/mobirise/js/script.js"></script>
   <script src="assets/dropdown-menu/script.js"></script>
   
