create github pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
 </head>
 <body>
-<section id="dropdown-menu-2" data-rv-view="5">
+<section id="dropdown-menu-2" data-rv-view="0">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -43,7 +43,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/c">web site maker</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/mobirise/js/script.js"></script>
